Fix research resources spacing

--- a/src/app/record/components/research-resource/research-resource.component.scss
+++ b/src/app/record/components/research-resource/research-resource.component.scss
@@ -70,7 +70,7 @@ app-panel-data {
 
 .description {
   display: block;
-  padding: 16px;
+  margin: 16px;
   .host:first-child {
     margin-bottom: 16px;
   }
